--- a/public/index.html
+++ b/public/index.html
@@ -7,21 +7,36 @@
         <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
+        <header>
+            <h1>Delfai</h1>
+        </header>
         <main>
-            <section id="spread">
+            <div id="question"></div>
+            <form>
+                <label>
+                    question for the cards:
+                    <input name="question" type="text">
+                </label>
+                <button type="submit">ask</button>
+            </form>
+            <div id="loading" style="display: none">Loading...</div>
+            <section id="spread" style="display: none">
                 <div id="past" class="timeframe">
                     <h2>Past</h2>
                     <h3 class="card"></h3>
+                    <img src="" alt="">
                     <div class="reading"></div>
                 </div>
                 <div id="present" class="timeframe">
                     <h2>Present</h2>
                     <h3 class="card"></h3>
+                    <img src="" alt="">
                     <div class="reading"></div>
                 </div>
                 <div id="future" class="timeframe">
                     <h2>Future</h2>
                     <h3 class="card"></h3>
+                    <img src="" alt="">
                     <div class="reading"></div>
                 </div>
                 <div id="advice">
@@ -31,6 +46,10 @@
             </section>
         </main>
 
-        <script src="/bundle.js"></script>
+        <script type="module">
+            import displaySpread, {handleSubmit} from "./display.js";
+            const formElem = document.querySelector("form");
+            formElem.onsubmit = handleSubmit;
+        </script>
     </body>
 </html>
