--- a/public/index.html
+++ b/public/index.html
@@ -9,16 +9,29 @@
     <body>
         <header>
             <h1>Delfai</h1>
+            <button id="new-reading" onclick="window.location.reload()" style="display: none">
+                new reading
+            </button>
         </header>
         <main>
-            <div id="question"></div>
-            <form>
-                <label>
-                    question for the cards:
+            <form id="custom">
+                <h2>Ask the Tarot cards a question:</h2>
+                <p>
+                    <em>Please keep in mind while writing your question:</em>
+                    <br/>
+                    These cards serve as a wellspring for personal introspection,
+                    rather than a means to definitively ascertain outcomes.
+                </p>
+                <div id="custom-input">
                     <input name="question" type="text">
-                </label>
-                <button type="submit">ask</button>
+                    <button type="submit">ask</button>
+                </div>
             </form>
+            <div id="questions">
+                <h2>Or choose one of these questions:</h2>
+            </div>
+            <div id="loading" style="display: none"></div>
+            <div id="question"></div>
             <section id="spread" style="display: none">
                 <div id="past" class="timeframe">
                     <h2>Past</h2>
@@ -47,8 +60,45 @@
 
         <script type="module">
             import {handleSubmit} from "./display.js";
-            const formElem = document.querySelector("form");
-            formElem.onsubmit = handleSubmit;
+
+            const questions = {
+                "Self-Discovery": "What aspects of myself should I focus on to better understand who I am?",
+                "Embracing": "How can I welcome and adapt to life's changes with a positive mindset?",
+                "Overcoming": "What strengths can I harness to navigate challenges and emerge stronger?",
+                "Inner": "What steps can I take to facilitate emotional healing and well-being?",
+                "Cultivating": "What steps can I take to develop a more compassionate and understanding nature?",
+                "Empowering": "What qualities should I nurture to pursue my goals with determination?",
+                "Balancing": "What areas of my life need more balance to enhance my overall harmony?",
+                "Building": "How can I improve my connections with others and create deeper bonds?",
+                "Fostering": "What can I do to stimulate and express my creative potential more fully?",
+                "Mindful": "What practices can help me stay present and make the most of each moment?",
+                "Strengthening": "How can I boost my self-confidence and believe in my abilities?",
+                "Finding": "What strategies will aid me in finding tranquility amidst life's hustle and bustle?",
+                "Emotional": "How can I delve into my emotions to gain deeper insights into my feelings?",
+                "Nurturing": "What actions can I take to cultivate a stronger sense of self-love and acceptance?",
+                "Letting": "What aspects of my life should I consider releasing in order to move forward?",
+                "Practicing": "How can I develop a habit of appreciating the positive aspects of my life?",
+                "Enhancing": "What methods can I use to connect more strongly with my inner intuition?",
+                "Focusing": "What can I do to shift my perspective towards a more positive outlook?",
+                "Living": "How can I align my actions and choices with my true, authentic self?"
+            }
+
+            const questionsElem = document.querySelector("#questions");
+
+            questionsElem.innerHTML += Object
+                .entries(questions)
+                .map(([key, value]) => `
+                    <form>
+                        <button name="question" type="submit" value="${value}">
+                            <h3>${key}</h3>
+                            ${value}
+                        </button>
+                    </form>
+                `)
+                .join("");
+
+            const formElems = document.querySelectorAll("form");
+            formElems.forEach(elem => elem.onsubmit = handleSubmit);
         </script>
     </body>
 </html>
