--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
                     These cards serve as a wellspring for personal introspection,
                     rather than a means to definitively ascertain outcomes.
                 </p>
-                <div id="custom-input">
-                    <input name="question" type="text">
+                <div id="custom-textarea">
+                    <textarea name="question"></textarea>
                     <button type="submit">ask</button>
                 </div>
             </form>
