--- a/public/index.html
+++ b/public/index.html
@@ -1,104 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Delfai</title>
-        <link rel="stylesheet" href="/css/style.css">
-    </head>
-    <body>
-        <header>
-            <h1>Delfai</h1>
-            <button id="new-reading" onclick="window.location.reload()" style="display: none">
-                new reading
-            </button>
-        </header>
-        <main>
-            <form id="custom">
-                <h2>Ask the Tarot cards a question:</h2>
-                <p>
-                    <em>Please keep in mind while writing your question:</em>
-                    <br/>
-                    These cards serve as a wellspring for personal introspection,
-                    rather than a means to definitively ascertain outcomes.
-                </p>
-                <div id="custom-textarea">
-                    <textarea name="question"></textarea>
-                    <button type="submit">ask</button>
-                </div>
-            </form>
-            <div id="questions">
-                <h2>Or choose one of these questions:</h2>
-            </div>
-            <div id="loading" style="display: none"></div>
-            <div id="question"></div>
-            <section id="spread" style="display: none">
-                <div id="past" class="timeframe">
-                    <h2>Past</h2>
-                    <h3 class="card"></h3>
-                    <img src="" alt="">
-                    <div class="reading"></div>
-                </div>
-                <div id="present" class="timeframe">
-                    <h2>Present</h2>
-                    <h3 class="card"></h3>
-                    <img src="" alt="">
-                    <div class="reading"></div>
-                </div>
-                <div id="future" class="timeframe">
-                    <h2>Future</h2>
-                    <h3 class="card"></h3>
-                    <img src="" alt="">
-                    <div class="reading"></div>
-                </div>
-                <div id="advice">
-                    <h2>Advice</h2>
-                    <div class="reading"></div>
-                </div>
-            </section>
-        </main>
-
-        <script type="module">
-            import {handleSubmit} from "./display.js";
-
-            const questions = {
-                "Self-Discovery": "What aspects of myself should I focus on to better understand who I am?",
-                "Embracing": "How can I welcome and adapt to life's changes with a positive mindset?",
-                "Overcoming": "What strengths can I harness to navigate challenges and emerge stronger?",
-                "Inner": "What steps can I take to facilitate emotional healing and well-being?",
-                "Cultivating": "What steps can I take to develop a more compassionate and understanding nature?",
-                "Empowering": "What qualities should I nurture to pursue my goals with determination?",
-                "Balancing": "What areas of my life need more balance to enhance my overall harmony?",
-                "Building": "How can I improve my connections with others and create deeper bonds?",
-                "Fostering": "What can I do to stimulate and express my creative potential more fully?",
-                "Mindful": "What practices can help me stay present and make the most of each moment?",
-                "Strengthening": "How can I boost my self-confidence and believe in my abilities?",
-                "Finding": "What strategies will aid me in finding tranquility amidst life's hustle and bustle?",
-                "Emotional": "How can I delve into my emotions to gain deeper insights into my feelings?",
-                "Nurturing": "What actions can I take to cultivate a stronger sense of self-love and acceptance?",
-                "Letting": "What aspects of my life should I consider releasing in order to move forward?",
-                "Practicing": "How can I develop a habit of appreciating the positive aspects of my life?",
-                "Enhancing": "What methods can I use to connect more strongly with my inner intuition?",
-                "Focusing": "What can I do to shift my perspective towards a more positive outlook?",
-                "Living": "How can I align my actions and choices with my true, authentic self?"
-            }
-
-            const questionsElem = document.querySelector("#questions");
-
-            questionsElem.innerHTML += Object
-                .entries(questions)
-                .map(([key, value]) => `
-                    <form>
-                        <button name="question" type="submit" value="${value}">
-                            <h3>${key}</h3>
-                            ${value}
-                        </button>
-                    </form>
-                `)
-                .join("");
-
-            const formElems = document.querySelectorAll("form");
-            formElems.forEach(elem => elem.onsubmit = handleSubmit);
-        </script>
-    </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>React App</title><script defer="defer" src="/static/js/main.7e9583d0.js"></script></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
