--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-96NNRQJT5M"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag('js', new Date());
+
+            gtag('config', 'G-96NNRQJT5M');
+        </script>
         <meta charset="utf-8"/>
-        <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
+        <title>Delfai Oracle</title>
+        <!-- meta_tags -->
+        <meta name="type" property="og:type" content="website">
+        <meta name="title" property="og:title" content="Delfai Oracle">
+        <meta name="url" property="og:url" content="https://delfai.web.app">
+        <meta name="description" property="og:description" content="Explore how Tarot cards relate to each other. Delfai Oracle answers questions with three-card readings. Users can also enter their own spreads for deeper insight.">
+        <meta name="image" property="og:image" content="https://delfai.web.app/assets/social-share.jpg">
+        <!-- twitter meta tags -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="@delfaioracle">
+        <meta name="twitter:title" content="Delfai Oracle">
+        <meta name="twitter:description" content="Explore how Tarot cards relate to each other. Delfai Oracle answers questions with three-card readings. Users can also enter their own spreads for deeper insight.">
+        <meta name="twitter:image" content="https://delfai.web.app/assets/social-share.jpg">
+        <!-- end meta tags -->
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <meta name="theme-color" content="#000000"/>
-        <meta
-      name="description"
-      content="Web site created using create-react-app"
-/>
-        <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
-        <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
-        <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-        <title>Delfai Oracle</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
