fix about bg attachment

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -40,36 +40,38 @@
     </head>
     <body>
         <main>
-            <h1>About Delfai Oracle</h1>
+            <div id="container">
+                <h1>About Delfai Oracle</h1>
 
-            <nav>
-                <a href="/">home</a>
+                <nav>
+                    <a href="/">home</a>
             &nbsp;&nbsp;|&nbsp;&nbsp;
             <a href="#contact">contact</a>
-            </nav>
+                </nav>
 
-            <p>Long ago in Ancient Greece an oracle sat in the province of Delphi, awaiting wanderers, warriors, and kings who would travel far distances to ask her their burning questions. She channeled visions from atop her stone pedestal while inhaling mystical vapors wafting from deep within the earth. Legends say she could advise any visitor how to confront any obstacle. Sadly this Oracle of Delphi has since disappeared, but don’t despair – now there is <a href="/" target="_blank" rel="noopener">Delfai Oracle</a>!</p>
-            <p>This web app lets you draw three cards to answer any question. Each card represents your past, present and future respectively. Paid users with a subscription of only <strong>$2.99/month</strong> get unlimited readings and access to the <strong id="custom">Custom Spread</strong> feature. This powerful tool is especially useful for students of Tarot, as it lets you enter any spread of one to ten cards for further analysis.</p>
+                <p>Long ago in Ancient Greece an oracle sat in the province of Delphi, awaiting wanderers, warriors, and kings who would travel far distances to ask her their burning questions. She channeled visions from atop her stone pedestal while inhaling mystical vapors wafting from deep within the earth. Legends say she could advise any visitor how to confront any obstacle. Sadly this Oracle of Delphi has since disappeared, but don’t despair – now there is <a href="/" target="_blank" rel="noopener">Delfai Oracle</a>!</p>
+                <p>This web app lets you draw three cards to answer any question. Each card represents your past, present and future respectively. Paid users with a subscription of only <strong>$2.99/month</strong> get unlimited readings and access to the <strong id="custom">Custom Spread</strong> feature. This powerful tool is especially useful for students of Tarot, as it lets you enter any spread of one to ten cards for further analysis.</p>
 
-            <h2>What sets Delfai Oracle apart?</h2>
-            <p>Tarot cards have meanings that spread across the entire spectrum of human experience, and the energies of the deck are in perfect harmony. Simply turning a card upside down completely inverts its message, giving Tarot even more symmetry. Carl Jung would call it the light of the human spirit balancing its shadow. One cannot exist without the other, yet too often a reader gets hung up on the meaning of a single card in one position and fails to acknowledge its relationship with other cards in the spread.</p>
-            <p>
-                <a href="/" target="_blank" rel="noopener">Delfai Oracle</a> analyzes every possible relationship between each card in a reading. What meanings do they share, and which words stand in stark contrast to each other? Studying these connections yields even deeper insights into the problem at hand. Any card reader who doesn’t study them can’t see the forest for the trees. I think the fantastic book
+                <h2>What sets Delfai Oracle apart?</h2>
+                <p>Tarot cards have meanings that spread across the entire spectrum of human experience, and the energies of the deck are in perfect harmony. Simply turning a card upside down completely inverts its message, giving Tarot even more symmetry. Carl Jung would call it the light of the human spirit balancing its shadow. One cannot exist without the other, yet too often a reader gets hung up on the meaning of a single card in one position and fails to acknowledge its relationship with other cards in the spread.</p>
+                <p>
+                    <a href="/" target="_blank" rel="noopener">Delfai Oracle</a> analyzes every possible relationship between each card in a reading. What meanings do they share, and which words stand in stark contrast to each other? Studying these connections yields even deeper insights into the problem at hand. Any card reader who doesn’t study them can’t see the forest for the trees. I think the fantastic book
             <a href="https://www.amazon.com/Tarot-Fundamentals-Tali-Goodwin/dp/0738748994" target="_blank" rel="noopener">Tarot Fundamentals</a> explains it best:</p>
-            <blockquote>
-                <p>The cards, each containing their own specific magic, symbolism, iconography, and meanings are easily connected to one another. They do not exist in a confusing vacuum but in a sensible and orderly fashion.</p>
-            </blockquote>
+                <blockquote>
+                    <p>The cards, each containing their own specific magic, symbolism, iconography, and meanings are easily connected to one another. They do not exist in a confusing vacuum but in a sensible and orderly fashion.</p>
+                </blockquote>
 
-            <h2>Find answers today</h2>
-            <p>
-                <a href="/">Click here to get started!</a>
-                All new members get <strong>five free readings</strong>, or unlimited readings for a subscription of only <strong>$2.99/month</strong>. Paid subscribers also get access to the powerful <a href="#custom">Custom Spread</a> feature mentioned above.
-            </p>
+                <h2>Find answers today</h2>
+                <p>
+                    <a href="/">Click here to get started!</a>
+                    All new members get <strong>five free readings</strong>, or unlimited readings for a subscription of only <strong>$2.99/month</strong>. Paid subscribers also get access to the powerful <a href="#custom">Custom Spread</a> feature mentioned above.
+                </p>
 
-            <h2 id="contact">Contact</h2>
-            <p>For any questions or concerns regarding <a href="/" target="_blank" rel="noopener">Delfai Oracle</a>, please contact <a href="mailto:al@fern.haus?subject=Delfai Oracle">al@fern.haus</a>
-            </p>
-            <p id="copyright">&copy; Alec Fernandes 2023</p>
+                <h2 id="contact">Contact</h2>
+                <p>For any questions or concerns regarding <a href="/" target="_blank" rel="noopener">Delfai Oracle</a>, please contact <a href="mailto:al@fern.haus?subject=Delfai Oracle">al@fern.haus</a>
+                </p>
+                <p id="copyright">&copy; Alec Fernandes 2023</p>
+            </div>
         </main>
     </body>
 </html>
