--- a/public/decan/index.html
+++ b/public/decan/index.html
@@ -28,13 +28,12 @@
     <body>
         <canvas id="canvas" width="800" height="800" style="display: none"></canvas>
         <div id="preview"></div>
-        <button id="redraw">redraw</button>
+        <button id="draw">draw canvas</button>
         <pre></pre>
         <p id="prompt"></p>
         <hr/>
-        <div id="response">
-            <em>Loading response...</em>
-        </div>
+        <button id="get-post">get post</button>
+        <div id="response"></div>
         <script type="module">
             import {getDay, getToday} from "./decan.js";
             import {askPrompt, getPrompt} from "./prompt.js";
@@ -45,21 +44,26 @@
                 canvasElem = document.querySelector("#canvas"),
                 previewElem = document.querySelector("#preview"),
                 respElem = document.querySelector("#response"),
+                drawButton = document.querySelector("button#draw"),
+                getPostBtn = document.querySelector("button#get-post"),
                 info = getToday(),
                 json = JSON.stringify(info, null, 4),
                 prompt = getPrompt(info);
             infoElem.textContent = json;
             promptElem.textContent = prompt;
-            drawCanvas(canvasElem, info, previewElem);
-            const response = await(await askPrompt(prompt)).json();
-            respElem.innerHTML = response
-                .choices[0]
-                .message
-                .content
-                .replaceAll("\n", "<br/>");
-            document
-                .querySelector("button#redraw")
-                .onclick = () => drawCanvas(canvasElem, info, previewElem);
+            // drawCanvas(canvasElem, info, previewElem);
+            drawButton.onclick = () => drawCanvas(canvasElem, info, previewElem);
+            getPostBtn.onclick = handleReading;
+
+            async function handleReading() {
+                respElem.innerHTML = "<em>Drafting post...</em>"
+                const response = await(await askPrompt(prompt)).json();
+                respElem.innerHTML = response
+                    .choices[0]
+                    .message
+                    .content
+                    .replaceAll("\n", "<br/>");
+            }
         </script>
     </body>
 </html>
