--- a/public/decan/index.html
+++ b/public/decan/index.html
@@ -6,8 +6,38 @@
         <title>Decan Post</title>
         <style>
             body {
+                max-width: 850px;
+                width: 100%;
                 background-color: #111;
+                box-sizing: border-box;
                 color: #eee;
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
+                font-family: Arial, sans-serif;
+                font-size: 14px;
+                line-height: 18px;
+                margin: 60px auto;
+                padding: 10px;
+            }
+
+            button {
+                display: block;
+                margin: auto;
+            }
+
+            h1 {
+                text-align: center;
+            }
+
+            hr {
+                width: 100%;
+            }
+
+            pre {
+                width: 100%;
+                margin: auto;
+                overflow: auto;
             }
 
             #preview {
@@ -26,14 +56,18 @@
         </style>
     </head>
     <body>
-        <canvas id="canvas" width="800" height="800" style="display: none"></canvas>
-        <div id="preview"></div>
-        <button id="draw">draw canvas</button>
+        <h1>Decan Post</h1>
         <pre></pre>
         <p id="prompt"></p>
         <hr/>
-        <button id="get-post">get post</button>
         <div id="response"></div>
+        <button id="get-post">get post</button>
+        <button id="copy">copy post</button>
+        <hr/>
+        <button id="draw">draw canvas</button>
+        <canvas id="canvas" width="800" height="800" style="display: none"></canvas>
+        <div id="preview"></div>
+
         <script type="module">
             import {getDay, getToday} from "./decan.js";
             import {askPrompt, getPrompt} from "./prompt.js";
@@ -41,19 +75,21 @@
 
             const infoElem = document.querySelector("pre"),
                 promptElem = document.querySelector("#prompt"),
+                respElem = document.querySelector("#response"),
                 canvasElem = document.querySelector("#canvas"),
                 previewElem = document.querySelector("#preview"),
-                respElem = document.querySelector("#response"),
-                drawButton = document.querySelector("button#draw"),
                 getPostBtn = document.querySelector("button#get-post"),
+                copyButton = document.querySelector("button#copy"),
+                drawButton = document.querySelector("button#draw"),
                 info = getToday(),
                 json = JSON.stringify(info, null, 4),
                 prompt = getPrompt(info);
             infoElem.textContent = json;
             promptElem.textContent = prompt;
             // drawCanvas(canvasElem, info, previewElem);
-            drawButton.onclick = () => drawCanvas(canvasElem, info, previewElem);
             getPostBtn.onclick = handleReading;
+            copyButton.onclick = handleCopy,
+            drawButton.onclick = () => drawCanvas(canvasElem, info, previewElem);
 
             async function handleReading() {
                 respElem.innerHTML = "<em>Drafting post...</em>"
@@ -63,6 +99,16 @@
                     .message
                     .content
                     .replaceAll("\n", "<br/>");
+            }
+
+            function handleCopy() {
+                const text = "\n" + respElem
+                    .innerHTML
+                    .replaceAll("<br>", "\n");
+                navigator
+                    .clipboard
+                    .writeText(text);
+                alert("Post copied!");
             }
         </script>
     </body>
