--- a/public/decan/index.html
+++ b/public/decan/index.html
@@ -35,7 +35,7 @@
             }
 
             pre {
-                width: 100%;
+                max-width: 100%;
                 margin: auto;
                 overflow: auto;
             }
