style kabbalah page

--- a/public/kabbalah/index.html
+++ b/public/kabbalah/index.html
@@ -3,9 +3,39 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Delfai Oracle &mdash; Kabbalah</title>
+        <title>Kabbalah &mdash; Delfai Oracle</title>
+        <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
-        <h1>Kabbalah</h1>
+        <main>
+            <div id="container">
+                <h1>Delfai Oracle</h1>
+                <h2>Realigning Kabbalah in Tarot with Jewish Mysticism</h2>
+
+                <nav>
+                    <a href="/">home</a>
+                    &nbsp;&nbsp;|&nbsp;&nbsp;
+                    <a href="#contact">contact</a>
+                </nav>
+
+                <img class="separator" src="/assets/separator.png" alt="decorative dividing line made up of square swirls in the Greek style.">
+
+                <p>The <a href="https://en.wikipedia.org/wiki/Hermetic_Order_of_the_Golden_Dawn" target="_blank" rel="noopener">Order of the Golden Dawn</a> greatly expanded the esoteric symbolism of Tarot cards. Their system of the <a href="/assets/wheel.png" target="_blank" rel="noopener">decan calendar wheel</a> and how they assigned cards to Kabbalah's Tree of Life gave the deck a much deeper spiritual meaning. While I respect this group dearly, I do believe they made one key error with the Tree of Life.</p>
+
+                <p>The Order of the Golden Dawn assigned the Major Arcana cards and their Hebrew letters to the paths between the spheres starting from the top down, in fairly strict order. These paths, however, do not align with the traditional Tree of Life in Jewish mysticism.</p>
+
+                <p>To understand this original tree, one must understand the 22 letters of the Hebrew alphabet. These can be divided in to three categories: the “mother letters” (3 elements), the “double letters” (7 known “planets” of the ancient world), and the other letters (12 zodiac signs). Kabbalah texts identify the mother letters as <em>aleph (א)</em>, <em>mem (מ)</em>, and <em>shin (ש)</em>, and the double letters each have two distinct pronunciations in ancient Hebrew.</p>
+
+                <p>[[ comparison image ]]</p>
+
+                <p>As you can see on the traditional tree, the lines, or paths, also fall into three different categories: horizontal lines (3), vertical lines (7), and diagonal lines (12). This design reflects the different groups of the Hebrew alphabet, and is therefore the most correct way to associate the 22 Major Arcana Tarot cards.</p>
+
+                <p>For example, the Fool, or <em>aleph (א)</em> — one of the three mother letters — should be on one of the three horizontal lines, and not at the very top of the tree as shown in the Golden Dawn layout. You’ll also notice the paths of the trees are slightly different. This is because the Order of the Golden Dawn used a version of the Tree of Life drawn by the non-Jewish scholar <a href="https://en.wikipedia.org/wiki/Athanasius_Kircher" target="_blank" rel="noopener">Athanasius Kircher</a> from Germany. His depiction of the tree is not the traditional one revealed by <a href="https://en.wikipedia.org/wiki/Isaac_Luria" target="_blank" rel="noopener">Ari Luria</a>.</p>
+
+                <p>These are very technical distinctions, but I believe they are important. In an era when we are actively addressing cultural appropriation, it’s vital to realign Tarot with traditional Kabbalah as practiced by the Jewish people, and not the Kabbalah adopted and warped by Western outsiders at the turn of the 20th century.</p>
+
+                <p id="copyright">© Alec Fernandes 2023</p>
+            </div>
+        </main>
     </body>
 </html>
