--- a/public/kabbalah/index.html
+++ b/public/kabbalah/index.html
@@ -1,9 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Kabbalah &mdash; Delfai Oracle</title>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-96NNRQJT5M"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag('js', new Date());
+
+            gtag('config', 'G-96NNRQJT5M');
+        </script>
+        <meta charset="utf-8"/>
+        <title>Realigning Kabbalah in Tarot with Jewish Mysticism &mdash; Delfai Oracle</title>
+        <!-- meta_tags -->
+        <meta name="type" property="og:type" content="website">
+        <meta name="title" property="og:title" content="Realigning Kabbalah in Tarot with Jewish Mysticism &mdash; Delfai Oracle">
+        <meta name="url" property="og:url" content="https://delfai.web.app">
+        <meta name="description" property="og:description" content="Learn the correct way to assign Major Arcana Tarot cards to the Tree of Life, according to traditional Kabbalah.">
+        <meta name="image" property="og:image" content="https://delfai.web.app/assets/social-share.jpg">
+        <!-- twitter meta tags -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="@delfaioracle">
+        <meta name="twitter:title" content="Realigning Kabbalah in Tarot with Jewish Mysticism &mdash; Delfai Oracle">
+        <meta name="twitter:description" content="Learn the correct way to assign Major Arcana Tarot cards to the Tree of Life, according to traditional Kabbalah.">
+        <meta name="twitter:image" content="https://delfai.web.app/assets/social-share.jpg">
+        <!-- end meta tags -->
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <meta name="theme-color" content="#000000"/>
         <link rel="stylesheet" href="/css/style.css">
         <link rel="stylesheet" href="css/tol.css">
         <style>
@@ -23,6 +55,13 @@
 
             td:nth-child(2) {
                 text-align: left;
+            }
+
+            #trees {
+                display: flex;
+                flex-wrap: wrap;
+                gap: 20px;
+                justify-content: center;
             }
         </style>
     </head>
@@ -48,7 +87,7 @@
 
                 <p>To understand this original tree, one must understand the 22 letters of the Hebrew alphabet. These can be divided in to three categories: the “mother letters” (3 elements), the “double letters” (7 known “planets” of the ancient world), and the other letters (12 zodiac signs). Kabbalah texts identify the mother letters as <em>aleph (א)</em>, <em>mem (מ)</em>, and <em>shin (ש)</em>, and the double letters each have two distinct pronunciations in ancient Hebrew.</p>
 
-                <p>[[ comparison image ]]</p>
+                <div id="letter-groups"></div>
 
                 <p>As you can see on the traditional tree, the lines, or paths, also fall into three different categories: horizontal lines (3), vertical lines (7), and diagonal lines (12). This design reflects the different groups of the Hebrew alphabet, and is therefore the most correct way to associate the 22 Major Arcana Tarot cards.</p>
 
@@ -76,14 +115,17 @@
             const fetcher = async (fileName) => await(await fetch(`/kabbalah/json/${fileName}.json`)).json(),
                 sefirot = await fetcher("sefirot"),
                 worlds = await fetcher("worlds"),
+                kabbalahMajors = await fetcher("majors"),
                 sefElem = document.querySelector("#sefirot-info"),
-                worldsElem = document.querySelector("#worlds-info");
+                worldsElem = document.querySelector("#worlds-info"),
+                groupsElem = document.querySelector("#letter-groups");
             sefElem.innerHTML = Object
                 .entries(sefirot)
                 .map(([key, val]) => `
                     <div id="${key.toLowerCase()}">
                         <h3>${val.rank}. ${key} </br> ${val.hebrew}</h3>
                         ${TreeOfLife({highlight: key})}
+                        <br/>
                         <table>
                             <tr><td>represents</td><td>${val.represents}</td></tr>
                             <tr><td>quality</td><td>${val.quality}</td></tr>
@@ -96,23 +138,39 @@
                 .join("");
             worldsElem.innerHTML = Object
                 .entries(worlds)
-                .map(([key, val]) => `
+                .map(([key, val]) => {
+                    const sefsContained = Object.entries(sefirot).filter(([k, v]) => v.world === key).map(([k]) => k);
+                    return `
                     <div id="${key.toLowerCase()}">
                         <h3 style="margin-bottom: 0">${key}</h3>
                         <p style="margin-top: 0">${val.quality} World</p>
+                        ${TreeOfLife({highlight: sefsContained})}
+                        <br/>
                         <table>
                             <tr><td>represents</td><td>${val.represents}</td></tr>
                             <tr><td>soul</td><td>${val.english}: ${val.hebrew} <em>(${val.latin.toLowerCase()})</em></td></tr>
-                            <tr><td>sefirot</td><td>${Object.entries(sefirot).filter(([k, v]) => v.world === key).map(([k]) => `<a href="#${k.toLowerCase()}">${k}</a>`).join(", ")}</td></tr>
+                            <tr><td>sefirot</td><td>${sefsContained.map((sef) => `<a href="#${sef.toLowerCase()}">${sef}</a>`).join(", ")}</td></tr>
                             <tr><td>element</td><td>${val.element} <em>(${val.suit})</em></td></tr>
                             <tr><td>court cards</td><td>${val.court}</td></tr>
                         </table>
                     </div>
                     <img class="separator" src="/assets/separator.png" alt="decorative dividing line made up of square swirls in the Greek style.">
-                `)
+                `})
                 .join("");
             const jump = window.location.href.split("#")[1];
             jump && document.querySelector(`#${jump}`).scrollIntoView();
+            groupsElem.innerHTML = `
+                <div id="trees">
+                    <div>
+                        <h3 style="color: lightgreen">Traditional & Correct</h3>
+                        ${TreeOfLife({showGroups: true})}
+                    </div>
+                    <div>
+                        <h3 style="color: salmon">Golden Dawn</h3>
+                        ${TreeOfLife({showGroups: true, isKircher: true, kabbalahMajors})}
+                    </div>
+                </div>
+            `;
         </script>
     </body>
 </html>
