add disclaimer and services grid

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -37,6 +37,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <meta name="theme-color" content="#000000"/>
         <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="/css/services.css">
     </head>
     <body>
         <main>
@@ -48,7 +49,46 @@
                     <a href="/">home</a>
                     &nbsp;&nbsp;|&nbsp;&nbsp;
                     <a href="#contact">contact</a>
+                    &nbsp;&nbsp;|&nbsp;&nbsp;
+                    <a href="#disclaimer">disclaimer</a>
                 </nav>
+
+                <br/>
+                <table id="services">
+                    <thead>
+                        <tr>
+                            <td colspan="3">New users get 5 free, instant Tarot readings!</td>
+                        </tr>
+                        <tr>
+                            <td>Feature</td>
+                            <td>Free Account</td>
+                            <td>Paid ($2.99/month)</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>3-card Readings</td>
+                            <td class="slow">5 readings</td>
+                            <td>unlimited</td>
+                        </tr>
+                        <tr>
+                            <td>Card of the Day</td>
+                            <td class="slow">current day only</td>
+                            <td>look up any day</td>
+                        </tr>
+                        <tr>
+                            <td>Custom Spread (1-10 cards)</td>
+                            <td class="stop">✗</td>
+                            <td>✓</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <a href="/kabbalah" target="_blank" rel="noopener">Kabbalah</a> Info</td>
+                            <td class="stop">✗</td>
+                            <td>✓</td>
+                        </tr>
+                    </tbody>
+                </table>
 
                 <img class="separator" src="/assets/separator.png" alt="decorative dividing line made up of square swirls in the Greek style.">
 
@@ -80,6 +120,16 @@
                 <h2 id="contact">Contact</h2>
                 <p>For any questions or concerns regarding <a href="/" target="_blank" rel="noopener">Delfai Oracle</a>, please contact <a href="mailto:al@fern.haus?subject=Delfai Oracle">al@fern.haus</a>
                 </p>
+
+                <img class="separator" src="/assets/separator.png" alt="decorative dividing line made up of square swirls in the Greek style.">
+
+                <h2 id="disclaimer">Disclaimer</h2>
+                <div>
+                    We are legally obligated to say this website is for personal reflection and entertainment purposes only, and not for definitively ascertaining unknown past, present, or future events. Using Tarot cards for divination in jurisdictions where it is illegal is by definition a crime, and Delfai Oracle does not promote or endorse divination in these regions.
+                </div>
+
+                <img class="separator" src="/assets/separator.png" alt="decorative dividing line made up of square swirls in the Greek style.">
+
                 <p id="copyright">&copy; Alec Fernandes 2023</p>
             </div>
         </main>
