--- a/public/about/index.html
+++ b/public/about/index.html
@@ -38,6 +38,7 @@
         <meta name="theme-color" content="#000000"/>
         <link rel="stylesheet" href="/css/style.css">
         <link rel="stylesheet" href="/css/services.css">
+        <link rel="stylesheet" href="/css/social.css">
     </head>
     <body>
         <main>
@@ -46,7 +47,20 @@
                 <h2>Tarot Card Readings</h2>
 
                 <nav>
+                    <div class="social">
+                        <a href="https://tiktok.com/@delfaioracle" target="_blank" rel="noopener">
+                            <img src="/assets/icons/social/tiktok.png" alt="TikTok logo"/>
+                        </a>
+                        <a href="https://instagram.com/delfaioracle" target="_blank" rel="noopener">
+                            <img src="/assets/icons/social/instagram.png" alt="Instagram logo"/>
+                        </a>
+                        <a href="https://x.com/delfaioracle" target="_blank" rel="noopener">
+                            <img src="/assets/icons/social/x.png" alt ="X logo"/>
+                        </a>
+                    </div>
                     <a href="/">home</a>
+                    &nbsp;&nbsp;|&nbsp;&nbsp;
+                    <a href="/kabbalah">kabbalah</a>
                     &nbsp;&nbsp;|&nbsp;&nbsp;
                     <a href="#contact">contact</a>
                     &nbsp;&nbsp;|&nbsp;&nbsp;
