--- a/public/kabbalah/index.html
+++ b/public/kabbalah/index.html
@@ -38,6 +38,7 @@
         <meta name="theme-color" content="#000000"/>
         <link rel="stylesheet" href="/css/style.css">
         <link rel="stylesheet" href="css/tol.css">
+        <link rel="stylesheet" href="/css/social.css">
         <style>
             table {
                 width: 230px;
@@ -72,7 +73,20 @@
                 <h2>Realigning Kabbalah in Tarot with Jewish Mysticism</h2>
 
                 <nav>
+                    <div class="social">
+                        <a href="https://tiktok.com/@delfaioracle" target="_blank" rel="noopener">
+                            <img src="/assets/icons/social/tiktok.png" alt="TikTok logo"/>
+                        </a>
+                        <a href="https://instagram.com/delfaioracle" target="_blank" rel="noopener">
+                            <img src="/assets/icons/social/instagram.png" alt="Instagram logo"/>
+                        </a>
+                        <a href="https://x.com/delfaioracle" target="_blank" rel="noopener">
+                            <img src="/assets/icons/social/x.png" alt ="X logo"/>
+                        </a>
+                    </div>
                     <a href="/">home</a>
+                    &nbsp;&nbsp;|&nbsp;&nbsp;
+                    <a href="/about">about</a>
                     &nbsp;&nbsp;|&nbsp;&nbsp;
                     <a href="#sefirot">sefirot</a>
                     &nbsp;&nbsp;|&nbsp;&nbsp;
@@ -83,9 +97,9 @@
 
                 <p>The <a href="https://en.wikipedia.org/wiki/Hermetic_Order_of_the_Golden_Dawn" target="_blank" rel="noopener">Order of the Golden Dawn</a> greatly expanded the esoteric symbolism of Tarot cards. Their system of the <a href="/assets/wheel.png" target="_blank" rel="noopener">decan calendar wheel</a> and how they assigned cards to Kabbalah's Tree of Life gave the deck a much deeper spiritual meaning. While I respect this group dearly, I do believe they made one key error with the Tree of Life.</p>
 
-                <p>The Order of the Golden Dawn assigned the Major Arcana cards and their Hebrew letters to the paths between the spheres starting from the top down, in fairly strict order. These paths, however, do not align with the traditional Tree of Life in Jewish mysticism.</p>
+                <p>In Kabbalistic Tarot, the 22 Major Arcana cards match the 22 letters of the Hebrew alphabet in sequence. The Order of the Golden Dawn assigned the Major Arcana cards and their Hebrew letters to the paths between spheres &mdash; or "sefirot" &mdash; on the Tree of Life starting from the top down, in fairly strict order. These paths, however, do not align with the traditional Tree of Life in Jewish mysticism.</p>
 
-                <p>To understand this original tree, one must understand the 22 letters of the Hebrew alphabet. These can be divided in to three categories: the “mother letters” (3 elements), the “double letters” (7 known “planets” of the ancient world), and the other letters (12 zodiac signs). Kabbalah texts identify the mother letters as <em>aleph (א)</em>, <em>mem (מ)</em>, and <em>shin (ש)</em>, and the double letters each have two distinct pronunciations in ancient Hebrew.</p>
+                <p>To understand this original tree, one must understand the 22 letters of the Hebrew alphabet. These can be divided in to three categories: the “mother letters” (3 elements), the “double letters” (7 known “planets” of the ancient world), and the other letters (12 zodiac signs). Kabbalah texts identify the mother letters as <em>aleph (א), mem (מ), and shin (ש)</em>, and the double letters each have two distinct pronunciations in ancient Hebrew &mdash; <em>beth (ב), gimmel (ג), daleth (ד), kaph (כ), peh (פ), rosh (ר), and tav (ת)</em>.</p>
 
                 <div id="letter-groups"></div>
 
