--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
         <meta name="theme-color" content="#000000"/>
         <link rel="stylesheet" href="/kabbalah/css/tol.css">
         <link rel="stylesheet" href="/css/services.css">
+        <link rel="stylesheet" href="/css/social.css">
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
