replace about page with landing

--- a/public/index.html
+++ b/public/index.html
@@ -18,13 +18,13 @@
         <meta name="type" property="og:type" content="website">
         <meta name="title" property="og:title" content="Delfai Oracle">
         <meta name="url" property="og:url" content="https://delfai.web.app">
-        <meta name="description" property="og:description" content="Explore how Tarot cards relate to each other. Delfai Oracle answers questions with three-card readings. Users can also enter their own spreads for deeper insight.">
+        <meta name="description" property="og:description" content="A web app for Tarot lovers! Get instant readings for any question.">
         <meta name="image" property="og:image" content="https://delfai.web.app/assets/social-share.jpg">
         <!-- twitter meta tags -->
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@delfaioracle">
         <meta name="twitter:title" content="Delfai Oracle">
-        <meta name="twitter:description" content="Explore how Tarot cards relate to each other. Delfai Oracle answers questions with three-card readings. Users can also enter their own spreads for deeper insight.">
+        <meta name="twitter:description" content="A web app for Tarot lovers! Get instant readings for any question.">
         <meta name="twitter:image" content="https://delfai.web.app/assets/social-share.jpg">
         <!-- end meta tags -->
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
