--- a/public/about/index.html
+++ b/public/about/index.html
@@ -13,18 +13,18 @@
             gtag('config', 'G-96NNRQJT5M');
         </script>
         <meta charset="utf-8"/>
-        <title>About Delfai Oracle</title>
+        <title>Welcome to Delfai Oracle</title>
         <!-- meta_tags -->
         <meta name="type" property="og:type" content="website">
-        <meta name="title" property="og:title" content="About Delfai Oracle">
+        <meta name="title" property="og:title" content="Welcome to Delfai Oracle">
         <meta name="url" property="og:url" content="https://delfai.web.app/about">
-        <meta name="description" property="og:description" content="Explore how Tarot cards relate to each other. Delfai Oracle answers questions with three-card readings. Users can also enter their own spreads for deeper insight.">
+        <meta name="description" property="og:description" content="A web app for Tarot lovers! Get instant readings for any question.">
         <meta name="image" property="og:image" content="https://delfai.web.app/assets/social-share.jpg">
         <!-- twitter meta tags -->
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@delfaioracle">
-        <meta name="twitter:title" content="About Delfai Oracle">
-        <meta name="twitter:description" content="Explore how Tarot cards relate to each other. Delfai Oracle answers questions with three-card readings. Users can also enter their own spreads for deeper insight.">
+        <meta name="twitter:title" content="Welcome to Delfai Oracle">
+        <meta name="twitter:description" content="A web app for Tarot lovers! Get instant readings for any question.">
         <meta name="twitter:image" content="https://delfai.web.app/assets/social-share.jpg">
         <!-- end meta tags -->
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -37,16 +37,24 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <meta name="theme-color" content="#000000"/>
         <link rel="stylesheet" href="/css/style.css">
-        <link rel="stylesheet" href="/css/services.css">
         <link rel="stylesheet" href="/css/social.css">
+        <link rel="stylesheet" href="css/scroll-cards.css">
+        <link rel="stylesheet" href="css/about.css">
     </head>
     <body>
-        <main>
+        <header style="z-index:0">
+            <!-- scrolling cards go here -->
+            <div id="scroll-cards-left" class="scroll-cards"></div>
+            <div id="scroll-cards-right" class="scroll-cards"></div>
+        </header>
+        <main style="z-index:1">
             <div id="container">
-                <h1>About Delfai Oracle</h1>
-                <h2>Tarot Card Readings</h2>
-
                 <nav>
+                    <h1>
+                        <span>Welcome to</span>
+                        <br/>
+                        Delfai Oracle
+                    </h1>
                     <div class="social">
                         <a href="https://tiktok.com/@delfaioracle" target="_blank" rel="noopener">
                             <img src="/assets/icons/social/tiktok.png" alt="TikTok logo"/>
@@ -58,88 +66,71 @@
                             <img src="/assets/icons/social/x.png" alt ="X logo"/>
                         </a>
                     </div>
-                    <a href="/">home</a>
-                    &nbsp;&nbsp;|&nbsp;&nbsp;
-                    <a href="/kabbalah">kabbalah</a>
-                    &nbsp;&nbsp;|&nbsp;&nbsp;
-                    <a href="#contact">contact</a>
-                    &nbsp;&nbsp;|&nbsp;&nbsp;
-                    <a href="#disclaimer">disclaimer</a>
+                    <a href="/" style="display:inline-block; margin-top:10px">home</a>
                 </nav>
 
-                <br/>
-                <table id="services">
+                <div id="intro" style="margin:20px auto 0">
+                    <p>                        
+                        A web app for Tarot lovers!
+                        <br/>
+                        Get instant readings for any question.
+                    </p>
+                </div>
+
+                <table id="unpaid-vs-paid">
                     <thead>
                         <tr>
-                            <td colspan="3">New users get 5 free, instant Tarot readings!</td>
-                        </tr>
-                        <tr>
-                            <td>Feature</td>
-                            <td>Free Account</td>
-                            <td>Paid ($2.99/month)</td>
+                            <th>Free accounts get:</th>
+                            <th>Paid accounts get:</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td>3-card Readings</td>
-                            <td class="slow">5 readings</td>
-                            <td>unlimited</td>
-                        </tr>
-                        <tr>
-                            <td>Card of the Day</td>
-                            <td class="slow">current day only</td>
-                            <td>look up any day</td>
-                        </tr>
-                        <tr>
-                            <td>Custom Spread (1-10 cards)</td>
-                            <td class="stop">✗</td>
-                            <td>✓</td>
+                            <td>
+                                5 free instant Tarot readings
+                            </td>
+                            <td>unlimited instant readings</td>
                         </tr>
                         <tr>
                             <td>
-                                <a href="/kabbalah" target="_blank" rel="noopener">Kabbalah</a> Info</td>
-                            <td class="stop">✗</td>
-                            <td>✓</td>
+                                6 cards for <a href="/assets/wheel.png" target="_blank" rel="noopener">the current date</a>
+                            </td>
+                            <td>cards for any date</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                no custom spreads
+                            </td>
+                            <td>
+                                any custom spread
+                                <br/>
+                                <small>
+                                    <em>enter 1-10 cards &mdash;<br/>a great tool for Tarot readers!</em>
+                                </small>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                no <a href="/kabbalah" target="_blank" rel="noopener">Kabbalah</a> info
+                            </td>
+                            <td>
+                                all info for <a href="/kabbalah" target="_blank" rel="noopener">Tarot and Kabbalah</a>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
 
-                <img class="separator" src="/assets/separator.png" alt="decorative dividing line made up of square swirls in the Greek style.">
-
-                <p>Long ago in Ancient Greece an oracle sat in the province of Delphi, awaiting wanderers, warriors, and kings who would travel far distances to ask their burning questions. She channeled visions from atop her stone pedestal while inhaling the mystical vapors that arose from deep within the mountainside. Legends say she could advise any visitor how to confront any obstacle. Sadly this Oracle of Delphi has since disappeared, but don’t despair – now there is <a href="/" target="_blank" rel="noopener">Delfai Oracle</a>!</p>
-                <p>This web app lets you draw three Tarot cards to answer any question. Each card represents your past, present and future respectively. Paid users with a subscription of only <strong>$2.99/month</strong> get unlimited readings and access to the <strong id="custom">Custom Spread</strong> feature. This powerful tool is especially useful for students of Tarot, as it lets you enter any spread of one to ten cards for further analysis.</p>
+                <a class="link-btn" href="/">Sign up for your FREE instant reading today!</a>
 
                 <img class="separator" src="/assets/separator.png" alt="decorative dividing line made up of square swirls in the Greek style.">
 
-                <h2>What sets Delfai Oracle apart?</h2>
-                <p>Tarot cards have meanings that spread across the entire spectrum of human experience, and the energies of the deck are in perfect harmony. Simply turning a card upside down completely inverts its message, giving Tarot even more symmetry. Carl Jung would call it the light of the human spirit balancing its shadow. One cannot exist without the other, yet too often a reader gets hung up on the meaning of a single card in one position and fails to acknowledge its relationship with other cards in the spread.</p>
-                <p>
-                    <a href="/" target="_blank" rel="noopener">Delfai Oracle</a> analyzes every possible relationship between each card in a reading. What meanings do they share, and which words stand in stark contrast to each other? Studying these connections yields even deeper insights into the problem at hand. Any card reader who doesn’t study them can’t see the forest for the trees. I think the fantastic book
-                    <a href="https://www.amazon.com/Tarot-Fundamentals-Tali-Goodwin/dp/0738748994" target="_blank" rel="noopener">Tarot Fundamentals</a> explains it best:
-                </p>
-                <blockquote>
-                    <p>The cards, each containing their own specific magic, symbolism, iconography, and meanings are easily connected to one another. They do not exist in a confusing vacuum but in a sensible and orderly fashion.</p>
-                </blockquote>
-
-                <img class="separator" src="/assets/separator.png" alt="decorative dividing line made up of square swirls in the Greek style.">
-
-                <h2>Find answers today</h2>
-                <p>
-                    <a href="/">Click here to get started!</a>
-                    All new members get <strong>five free readings</strong>, or unlimited readings for a subscription of only <strong>$2.99/month</strong>. Paid subscribers also get access to the powerful <a href="#custom">Custom Spread</a> feature mentioned above.
-                </p>
-
-                <img class="separator" src="/assets/separator.png" alt="decorative dividing line made up of square swirls in the Greek style.">
-
-                <h2 id="contact">Contact</h2>
-                <p>For any questions or concerns regarding <a href="/" target="_blank" rel="noopener">Delfai Oracle</a>, please contact <a href="mailto:al@fern.haus?subject=Delfai Oracle">al@fern.haus</a>
-                </p>
-
-                <img class="separator" src="/assets/separator.png" alt="decorative dividing line made up of square swirls in the Greek style.">
-
-                <h2 id="disclaimer">Disclaimer</h2>
-                <div>
-                    We are legally obligated to say this website is for personal reflection and entertainment purposes only, and not for definitively ascertaining unknown past, present, or future events. Using Tarot cards for divination in jurisdictions where it is illegal is by definition a crime, and Delfai Oracle does not promote or endorse divination in these regions.
+                <div id="disclaimer">
+                    <h4 style="margin:0 auto 12px">Disclaimer</h4>
+                    <p>
+                        <small>
+                            <em>This web app is restricted to users aged 18+. We are legally obligated to say this website is for personal reflection and entertainment purposes only, and not for definitively ascertaining unknown past, present, or future events. Using Tarot cards for divination in jurisdictions where it is illegal is by definition a crime, and Delfai Oracle does not promote or endorse divination in these regions.</em>
+                        </small>
+                    </p>
                 </div>
 
                 <img class="separator" src="/assets/separator.png" alt="decorative dividing line made up of square swirls in the Greek style.">
@@ -147,5 +138,7 @@
                 <p id="copyright">&copy; Alec Fernandes 2023</p>
             </div>
         </main>
+
+        <script src="scrolling-cards.js"></script>
     </body>
 </html>
