--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
         <meta name="theme-color" content="#000000"/>
         <link rel="stylesheet" href="/css/social.css">
         <link rel="stylesheet" href="/kabbalah/css/tol.css">
+        <link rel="stylesheet" href="/about/css/scroll-cards.css">
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -52,5 +53,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+        <script src="/about/scrolling-cards.js"></script>
     </body>
 </html>
